# coxel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  firmware.cox  partitions.csv  test.cox
carts/: firmware.cox  test.cox
src/: CMakeLists.txt  alloc.c  alloc.h  arith.c  arith.h  arr.c  arr.h  assetmap.c  assetmap.h  buf.c  buf.h  cfunc.c  cfunc.h  compiler.c  compiler.h  config.h  cpu.c  cpu.h  cpu_dispatch.h  font.c  gc.c  gc.h  gfx.c  gfx.h  key.c  key.h  lib.c  lib.h  menu.c  menu.h  platform.c  platform.h  rand.c  rand.h  str.c  str.h  strstr.h  sym.c  sym.h  tab.c  (+2 more)
src/hal/: bluetooth.c  bluetooth.h  wifi.c  wifi.h
